# tdisplay-s3-aida64

./: CMakeLists.txt  sdkconfig.defaults
.github/workflows/: build.yml
components/bsp/: CMakeLists.txt  backlight.c  backlight.h  button.c  button.h  lcd_i80.c  lcd_i80.h  lcd_spi.c  lcd_spi.h
docs/: BUILD.md  FIRMWARE_RELEASE.md  SSE_FIELD_CONTRACT.md  UI_DESIGN_SPEC.md  sse_mock.py
main/: CMakeLists.txt  aida64.c  aida64.h  boot_anim.c  boot_anim.h  font_cn_18.c  idf_component.yml  lv_port.c  lv_port.h  main.c  ui.c  ui.h  web_pages.h  wifi_manager.c  wifi_manager.h  wifi_ui.c  wifi_ui.h
scripts/: build_and_merge.sh  flash.sh  seafile_upload.sh  sync_source_to_seafile.sh
